# trv-scraper

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pgadmin.sh  postgres.sh
.github/workflows/: docker.yml
api/: Cargo.toml
api/src/: fighter.rs  lib.rs  tournament.rs  tournament_detail.rs  util.rs
api/src/tests/: 1v1.json  1v1_large.json  bloodbath.json  bloodelo.json  blooding.json  fighter.json  fighter_28787.json  fighter_29001.json  fighter_363.json  tournament_detail.json  tournament_detail_2.json  tournament_detail_3.json  tournament_detail_empty_battle.json
entity/: Cargo.toml
entity/src/entities/: fighter.rs  fighter_parent.rs  fighter_trait.rs  meta_failed_tournament_request.rs  meta_last_page.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  tournament.rs  tournament_detail_attack.rs  tournament_detail_champion.rs  tournament_detail_round.rs  tournament_fighter.rs  tournament_solo_warrior.rs  tournament_warrior.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_fighter_table.rs  m20220101_000002_create_tournament_table.rs  m20220101_000003_create_tournament_details_table.rs  m20220101_000004_merge_detail_fighters.rs
src/: main.rs
src/task/: fighter.rs  mod.rs  tournament.rs
