[package]
name = "trv-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.10.5", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.15.0", features = ["full"] }


[workspace]
members = [".", "entity", "migration", "api"]