[package]
name = "trv-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.15.0", features = ["full"] }
api = { path = "api" }
futures = "0.3.25"
backoff = { version = "0.4.0", features = ["tokio"] }
anyhow = "1.0.68"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
scraper = "0.14.0"
serde = "1.0.152"
serde_json = "1.0.91"
ethers-core = "1.0.2"
entity = { path = "entity" }
dotenv = "0.15.0"
itertools = "0.10.5"
chrono = "0.4.23"
erc-nft-metadata = { version = "0.1.1", features = ["serde"] }

[workspace]
members = [".", "entity", "migration", "api"]
