[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
erc-nft-metadata = { version = "0.1.1", features = ["serde"] }
ethers-core = "1.0.2"
serde = { version = "1.0.152", features = ["derive"] }
serde-aux = "4.1.2"
serde_json = "1.0.91"
